--- a/spices/cix-mlocate.org
+++ b/spices/cix-mlocate.org
@@ -1,6 +1,6 @@
 # File           : cix-mlocate.org
 # Created        : <2018-08-30 Thu 22:18:40 BST>
-# Modified       : <2018-8-30 Thu 22:54:25 BST> Sharlatan
+# Modified       : <2018-8-31 Fri 12:05:45 BST> Sharlatan
 # Author         : Sharlatan
 # Maintainer(s)  :
 # Sinopsis       : <An utility for finding files by name>
@@ -30,7 +30,9 @@ much.
 **** locate-180830223238
 locate exact path to directory from a =dir_list=:
 :    ~$ xargs -P8 -I{} sh -c "locate {} | grep /{}$" < dir_list
-[[file:./cix-gnu-findutils.org::*xargs][xargs]] [[file:./cix-gnu-grep.org::*grep][grep]]
+:    ~$ < dir_list parallel 'locate {} | grep /{}$'
+[[file:./cix-gnu-findutils.org::*xargs][xargs]] [[file:./cix-gnu-grep.org::*grep][grep]] parralel
+
 *** locate::see-also
 
 ** updatedb
