--- a/spices/cix-gnu-coreutils.org
+++ b/spices/cix-gnu-coreutils.org
@@ -1,6 +1,6 @@
 # File       : cix-gnu-coreutils.org
 # Created    : Wed 14 Oct 2015 23:07:41
-# Modified   : <2018-10-30 Tue 21:48:05 GMT> Sharlatan
+# Modified   : <2018-12-24 Mon 11:29:50 GMT> Sharlatan
 # Maintainer : sharlatan
 # Sinopsis   : <A set of basic GNU tools commonly used in shell scripts>
 
@@ -494,34 +494,34 @@ slice off lines from left, right, both sides by N chars:
 
 *** dd::examples
 **** dd-161124233800
-Output your microphone to a remote computer's speaker:
+output your microphone to a remote computer's speaker:
 :    ~$ dd if=/dev/dsp | ssh -c arcfour -C username@host dd of=/dev/dsp
 [[file:./cix-openssh.org::*ssh][ssh (1)]]
 
 **** dd-161124225351
-Killing features of =dd=:
+killing features of =dd=:
 :    ~# dd if=/dev/zero of=/dev/sdX    #  format device
 :    ~# dd if=/dev/random of=/dev/port #  freeze the system
 
 **** dd-161116230224
-Memory I/O speed test with 34G of data:
+memory I/O speed test with 34G of data:
 :    ~$ time dd if=/dev/zero of=/dev/null bs=1M count=32768
 
 **** dd-161221215259
-Make an image of and device and send it via ssh (or receive it):
+make an image of and device and send it via ssh (or receive it):
 :    ~$ dd if=/dev/sda | gzip -1 - | ssh user@local dd of=img.gz     # from remote
 :    ~$ ssh user@remote "dd if=/dev/sda | gzip -1 -" | dd of=img.zip # from local
 :    ~$ ssh user@remote "dd if=/dev/cdrom" | dd of=remote_cdrom.iso
 [[file::*gzip][gzip (1)]] [[file:./cix-openssh.org::*ssh][ssh (1)]]
 
 **** dd-161113185213
-Test NFS, LAN and I/O speed:
+test NFS, LAN and I/O speed with 268MB image:
 #+BEGIN_SRC sh
   #!/usr/bin/bash
 
   NFS_PATH="/mount/point/of/nfs/dir"
   echo "Write speed"
-  time dd if=/dev/zero of="$NFS_PATH"/test_file bs=16k count=16384
+  time dd if=/dev/urandom of="$NFS_PATH"/test_file bs=16k count=16384
 
   echo "Read speed"
   time dd if="$NFS_PATH"/test_file of=/dev/null bs=16k
@@ -529,7 +529,7 @@ Test NFS, LAN and I/O speed:
 [[./cix-gnu-bash-builtin.org::echo][echo]] [[file::*time][time (1)]]
 
 **** dd-161113185234
-Copy and restore MBR of block device (HDD/SSD):
+copy and restore MBR of block device (HDD/SSD):
 #+BEGIN_SRC sh
   #!/usr/bin/bash
 
@@ -592,7 +592,7 @@ duplicate several drives concurrently:
 [[file:./cix-gnu-core-utilities.org::*tee][tee (1)]]
 
 **** dd-170720235928
-Read =file1=, =file2= and append output back to =file1=:
+read =file1=, =file2= and append output back to =file1=:
 :    ~$ cat file1 <(dd if=file2 bs="$(wc -c file2)" count=1) >> file2
 
 **** dd-170819013515
